package main.biblioteca;

public enum EstadoCopia {
    /**
     * Lista de las distintas constantes que existen para la copia de un libro
     */
    PRESTADO,
    RETRASO,
    BIBLIOTECA,
    REPARACION
}
