package main.biblioteca;

public enum Genero {
    /**
     * Lista de las distintas constantes que existen para la genero de un libro
     */
    NOVELA,
    TEATRO,
    POESIA,
    ENSAYO
}
