@startuml biblioteca
'https://plantuml.com/class-diagram

left to right direction
skinparam classAttributeIconSize 0

Libro -- Copia
Copia -- Lectores
Lectores -- Multa
Libro -- Autores
(Copia, Lectores) ... Prestamo


class Autores {
-nombre : String
-nacionalidad : String
-fechaNacimiento : Date
}

class Libro {
titulo : String
editorial : String
year : Integer
tipo : Genero

}

class Prestamo{
-inicio : Date
-fin : Date
}

class Lectores{
-numero : Integer
-nombre : String
-direccion : String
-telefono : String

}

class Copia{
-referencia : Integer
-estado : EstadoCopia
}

class Multa{
-inicio : Date
-fin : Date
}

enum Genero <<enumeration>> {
novela
teatro
poesia
ensayo
}

enum EstadoCopia <<enumeration>>{
prestado
retraso
biblioteca
reparacion
}

Multa"0..1" - Lectores
Copia "0..3" - "0..1" Lectores
Copia "1..*" - Libro
Libro "1..*" - Autores
( Copia, Lectores) ... Prestamo : recibe

@enduml